test/CheckError/Class/NoNullConstructor.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int value) {
	static Create = default;
}

export int main(unused int argc, unused ubyte ** argv) {
	// CHECK: .loci:10:2: error: User cast failed from type 'null_t' to type 'notag(TestClass)'.
	TestClass object = null;
	return 0;
}

// CHECK: 1 error generated.

